GET, UPDATE & DELETE Swagger
