# APIS/internal/infra/webserver/handlers/product_handlers.go
@@ -53,6 +53,19 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// GetProduct godoc
+//
+//	@Summary		Get a product by id
+//	@Description	Get a product by id
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"product ID"	Fomrat(uuid)
+//	@Success		200	{object}	entity.Product
+//	@Failure		404
+//	@Failure		500	{object}	Error
+//	@Router			/products/{id} [get]
+//	@Security		ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -70,6 +83,7 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 }
 
 // GetProducts godoc
+//
 //	@Summary		List all products
 //	@Description	Get all products
 //	@Tags			products
@@ -109,6 +123,20 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(products)
 }
 
+// UpdateProduct godoc
+//
+//	@Summary		Update a product
+//	@Description	Update a product with the input payload
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path	string					true	"product ID"	Format(uuid)
+//	@Param			request	body	dto.CreateProductInput	true	"product request"
+//	@Success		200
+//	@Failure		404
+//	@Failure		500	{object}	Error
+//	@Router			/products/{id} [put]
+//	@Security		ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -144,6 +172,19 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteProduct godoc
+//
+//	@Summary		Delete a product
+//	@Description	Delete a product by id
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"product ID"	Format(uuid)
+//	@Success		200
+//	@Failure		404
+//	@Failure		500	{object}	Error
+//	@Router			/products/{id} [delete]
+//	@Security		ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
